fixed typos, clarified instructions

--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -355,7 +355,8 @@ display.clear()
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeBIT01&#39; D2L Assignment Folder.
+                (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
+                Upload your screenshot to the &#39;FormativeBIT01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
