--- a/FormativeUno01/FormativeUno01.html
+++ b/FormativeUno01/FormativeUno01.html
@@ -93,9 +93,10 @@
 
             <p>
                 These instructions will show you how to create 
-                and upload &#39;sketches&#39; or programs into an <a href="https://en.wikipedia.org/wiki/Arduino_Uno" class="bg-info text-white" target="_blank">Arduino UNO microcontroller</a>.<br />
-                Microcontrollers are becoming common-they control automobile engines and subsystems. <a href="https://www.elprocus.com/different-microcontrollers-used-in-automobiles/" class="bg-info text-white" target="_blank">Examples</a>.<br />
-                And they will provide substantial cost savings in automobiles, like <a href="https://evannex.com/blogs/news/tesla-designs-a-new-wiring-architecture-that-could-greatly-streamline-production" class="bg-info text-white" target="_blank">Teslas</a>.<br />
+                and upload &#39;sketches&#39; or programs onto an <a href="https://en.wikipedia.org/wiki/Arduino_Uno" class="bg-info text-white" target="_blank">Arduino UNO microcontroller</a>.<br />
+                Microcontrollers are becoming common-they control automobile engines and many other complex systems.<br />
+                They automate tasks to save time. <a href="https://www.elprocus.com/different-microcontrollers-used-in-automobiles/" class="bg-info text-white" target="_blank">Examples</a>.<br />
+                They are going to provide substantial cost savings in automobiles, like <a href="https://evannex.com/blogs/news/tesla-designs-a-new-wiring-architecture-that-could-greatly-streamline-production" class="bg-info text-white" target="_blank">Teslas, when used effectively</a>.<br />
                 In later assignments you will continue working with and experiencing the capabilities of the Arduino UNO.
             </p>
             <p>After completing this assignment you will be able to:</p>
@@ -111,7 +112,7 @@
 
         <p>
             <a href="ArduinoPinout.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ArduinoPinout.png', 'popup'); return false;">
-                <img src="ArduinoPinout.PNG" width="300" alt="Arduion Pinout" class="img-responsive img-responsive" /></a>Arduino Pinout
+                <img src="ArduinoPinout.PNG" width="300" alt="Arduino Pinout" class="img-responsive img-responsive" /></a>Arduino Pinout
         </p>
 
 
@@ -119,7 +120,7 @@
 
         <div id="Overview" class="collapse in  col-lg-12">
             This assignment reviews basic computer concepts that you will need in this course and throughout your career.<br />
-            For this assignment, you will install the Arduino IDE installed on your Raspberry Pi.<br />
+            For this assignment, you will install the Arduino IDE to a Raspberry Pi.<br />
             Then you will learn to work with the Arduino IDE and upload sketches.<br />
             Later assignments will show you how to modify, create and debug these sketches.
             <p>
@@ -136,7 +137,7 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Arduion UNO IDE</a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Arduino UNO IDE</a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
 
@@ -148,19 +149,20 @@
 
                 <li>Make sure to connect the Raspberry Pi to the Arduino UNO using a USB A to B cable.</li>
                 <li>Boot the Raspberry Pi, and ensure it has internet access.</li>
-                <li>You may notice that after the Raspberry Pi boots, that a light on the Arduino UNO begins flashing.<br />
+                <li>You may notice that after the Raspberry Pi boots, that an orange light on the Arduino UNO begins flashing.<br />
                     This is not a problem, the UNO is running a default sketch that was uploaded previously.
                 </li>
                 <li>Open a terminal window.<br />
-                    Type in <code>sudo apt-get update</code>, and when that completes, type in <code>sudo apt-get upgrade</code> to update the Raspberry Pi.
+                    Type in <code>sudo apt-get update</code>, press Enter.<br />
+                    When that completes, type in <code>sudo apt-get upgrade</code>, press Enter, and update the Raspberry Pi.
                 </li>
-                <li>To install the Arduino IDE, in the terminal window type <code>sudo apt-get install arduino</code><br />
+                <li>To install the Arduino IDE, in the terminal window type <code>sudo apt-get install arduino</code>, and press Enter.<br />
                     Type 
                     &#39;y&#39; and press Enter when asked to continue with the install, which is about 130MB.</li>
                 <li>When done, the Arduino IDE can be accessed from Menu&gt;Programming<br />
                     <p>
                         <a href="UnoIDE.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('UnoIDE.PNG', 'popup'); return false;">
-                            <img src="UnoIDE.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Arduino UNO IDE
+                            <img src="UnoIDE.PNG" width="300" alt="Arduino UNO IDE" class="img-responsive img-responsive" /></a>Arduino UNO IDE
                     </p>
 
                 </li>
@@ -185,7 +187,7 @@
                     If not, time to trouble-shoot.
                     <p>
                         <a href="VerifySketch.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VerifySketch.PNG', 'popup'); return false;">
-                            <img src="VerifySketch.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Sketch Compiled Properly
+                            <img src="VerifySketch.PNG" width="300" alt="compiled sketch" class="img-responsive img-responsive" /></a> Sketch Compiled Properly
                     </p>
                 </li>
 
@@ -213,7 +215,7 @@
                     <br />
                     After a few seconds the status bar will display the message 
                     &#39;Done uploading.&#39;<br />
-                    The amber light will be blinking-on 1 second, off 1 second, until power is removed, or another sketch is uploaded.<br />
+                    The orange light will be blinking-on 1 second, off 1 second, until power is removed, or another sketch is uploaded.<br />
                     <p>
                         <a href="BlinkyLight.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('BlinkyLight.PNG', 'popup'); return false;">
                             <img src="BlinkyLight.PNG" width="300" alt="Blinking Light" class="img-responsive img-responsive" /></a> Blinking Light
@@ -255,14 +257,17 @@
 
                     <p>
                         <a href="Blink01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Blink01.PNG', 'popup'); return false;">
-                            <img src="Blink01.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                            <img src="Blink01.PNG" width="300" alt="Modified Blinking Light Program" class="img-responsive img-responsive" /></a>Modified Blinking Light Program<br />
                     </p>
 
                 </li>
 
-                <li>When you are satisfied that your sketch is ready to go, choose File&gt;Upload to compile and upload the new sketch to the UNO.<br />
+                <li>When you are satisfied that your sketch works, choose File&gt;Upload to compile and upload the new sketch to the UNO.<br />
                     Note that if you get an error message, you may need to choose Tools
-                    &gt;Serial Port&gt;/dev/tty/ACM0</li>
+                    &gt;Serial Port&gt;/dev/tty/ACM0
+                    <br />
+                    Or you may need to do some troubleshooting.
+                </li>
             </ol>
             <hr />
         </div>
@@ -276,18 +281,18 @@
         <div id="Exercise04" class="collapse in  col-lg-12">
 
             <ol>
-                <li>On the Raspberry Pi make sure the Arduion IDE and your name on the desktop are visible.</li>
+                <li>On the Raspberry Pi make sure the Arduino IDE and your name on the desktop are visible.</li>
 
                 <li>In the terminal window type in 
                     <code>scrot -s</code>
-                    then click and drag the mouse to select an area around your name in the text file, and the Arduino IDE.
+                    then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop, and the Arduino IDE.
                 </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot FormativeUNO01.png</li>
+                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot <strong>FormativeUNO01.png</strong></li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
                         <a href="FormativeUNO01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FormativeUNO01.PNG', 'popup'); return false;">
-                            <img src="FormativeUNO01.PNG" width="300" alt="Blink01" class="img-responsive img-responsive" /></a>Modified Blink01<br />
+                            <img src="FormativeUNO01.PNG" width="300" alt="Blink01 code" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
                     </p>
                 </li>
             </ol>
@@ -311,7 +316,8 @@
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativeUNO01&#39; D2L Assignment Folder.
+                (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
+                Upload your screenshot to the &#39;FormativeUNO01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
