--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -324,14 +324,14 @@ display.clear()
 
                 <li>In the terminal window type in 
                     <code>scrot -s</code>
-                    then click and drag the mouse to select an area around your name and the mu editor.
+                    then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop and the mu editor.
                 </li>
                 <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot FormativeBit01.png</li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
                         <a href="PythonCode.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('PythonCode.PNG', 'popup'); return false;">
-                            <img src="PythonCode.PNG" width="300" alt="Python Code" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
+                            <img src="PythonCode.PNG" width="300" alt="screen shot format" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
                     </p>
                 </li>
             </ol>
