--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -350,7 +350,7 @@
             <p>
                 The screen shot name will be of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
                 <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="configuration" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
+                    <img src="ConfigurationScreenShot.PNG" width="300" alt="sample screen shot" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
                 <br />
             </p>
             Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.<br />
