--- a/FormativeUno01/FormativeUno01.html
+++ b/FormativeUno01/FormativeUno01.html
@@ -285,14 +285,14 @@
 
                 <li>In the terminal window type in 
                     <code>scrot -s</code>
-                    then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop, and the Arduino IDE.
+                    then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop and the Arduino IDE.
                 </li>
                 <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot <strong>FormativeUNO01.png</strong></li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
                         <a href="FormativeUNO01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FormativeUNO01.PNG', 'popup'); return false;">
-                            <img src="FormativeUNO01.PNG" width="300" alt="Blink01 code" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
+                            <img src="FormativeUNO01.PNG" width="300" alt="screen shot format" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
                     </p>
                 </li>
             </ol>
