--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -331,7 +331,7 @@ display.clear()
                     <p>
                         Your screen shot will look something like this:<br />
                         <a href="PythonCode.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('PythonCode.PNG', 'popup'); return false;">
-                            <img src="PythonCode.PNG" width="300" alt="screen shot format" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
+                            <img src="PythonCode.PNG" width="300" alt="sample screen shot" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
                     </p>
                 </li>
             </ol>
