added shutdown note, updating vnc assignment

--- a/FormativeBit01/FormativeBit01.html
+++ b/FormativeBit01/FormativeBit01.html
@@ -385,6 +385,16 @@ display.clear()
         </div>
 
 
+        <hr />
+        <div class="col-lg-12 text-danger text-center">
+            <h2>WHEN DONE<br />
+                SHUTDOWN THE RASPBERRY PI<br />
+                TURN OFF THE POWER<br />
+                REMOVE YOUR microSD CARD
+            </h2>
+        </div>
+        <hr />
+
 
         <div class=" col-lg-12">
             <br />
