--- a/FormativePi02/FormativePi02.html
+++ b/FormativePi02/FormativePi02.html
@@ -86,26 +86,26 @@
         <div id="Objectives" class=" collapse in col-lg-12">
 
             <p>
-                
-                    <img src="VNCViewer.PNG"  alt="VNC Viewer" class="img-responsive img-responsive" />VNC Viewer
+                <img src="VNCViewerIcon.PNG" alt="VNC Viewer" class="img-responsive img-responsive" />VNC Viewer
             </p>
 
-
             <p>
-                These instructions will show you how to download and create the operating system for a Raspberry Pi single-board computer (SBC); and then start up the device.<br />
-                SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
-                In later assignments you will continue working with and experiencing the capabilities of the Raspberry Pi.
+                These instructions will show you how to download and install VNC Viewer onto your laptop.<br />
+                This software allows you to control a Raspberry Pi over a network using your laptop.<br />
+                This 
+                &#39;remote access&#39; technology has revolutionized the way IT professionals work, allowing them to access numerous devices all over the world from their computer.<br />
+
+                More information on <a href="https://en.wikipedia.org/wiki/RealVNC" class="bg-info text-white" target="_blank">RealVNC</a> is available online.<br />
+
+                Being able to use this software will greatly simplify working with the Raspberry Pi, Arduino UNO and micro:bit.
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
-                <li>Obtain latest Raspbian operating system</li>
-                <li>Create a bootable micro-SD card containing the operating system</li>
-                <li>Boot the Raspberry Pi</li>
-                <li>Connect to the WSU Guest wireless network</li>
-                <li>Configure the Raspberry Pi</li>
-                <li>Use a web browser and other software on the Raspberry Pi</li>
-                <li>Install an application on the Raspberry Pi to take screen shots</li>
-                <li>Upload the screen shot to D2L.</li>
+                <li>Obtain RealVNC viewer</li>
+                <li>Install RealVNC viewer on your laptop</li>
+                <li>Connect to theRaspberry Pi using RealVNC</li>
+                <li>Control the Raspberry Pi from your laptop using RealVNC</li>
+                <li>Transfer files in both directions between the Raspberry Pi and your laptop</li>
             </ol>
             <hr />
         </div>
@@ -123,48 +123,43 @@
                 refer to the <a href="https://learn.winona.edu/WSU_Technology_Knowledge_Base" class="bg-info text-white" target="_blank">WSU Technology Knowledge Base</a>,&nbsp; ask a teaching assistant, or ask the instructor.
             </p>
 
-            <p>
-                <a href="RPi3Pinout.png" class="img-responsive img-rounded" target="popup" onclick="window.open('RPi3Pinout.png', 'popup'); return false;">
-                    <img src="RPi3Pinout.png" width="300" alt="Raspberry Pi 3" class="img-responsive img-responsive" /></a>Raspberry Pi 3 B+
-            </p>
-
             <hr />
         </div>
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Obtain Operating System</a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Install VNC Viewer</a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
                 <li>These steps are performed on your laptop.</li>
 
-                <li>Open a browser to: <a href="https://www.balena.io/etcher/" class="bg-info text-white" target="_blank">https://www.balena.io/etcher/ </a></li>
+                <li>Open a browser to: <a href="https://www.realvnc.com/en/connect/download/viewer/" class="bg-info text-white" target="_blank">https://www.realvnc.com/en/connect/download/viewer/ </a></li>
 
-                <li>Download and save Etcher to your ' 
+                <li>Download and save RealVNC Viewer to your ' 
                 <code><span id="aPath"></span></code>
                     <script>document.getElementById("aPath").innerHTML = Path; </script>
                     ' folder.<br />
                 </li>
 
-                <li>Use File Explorer, find the Etcher install file, and double-click to install Etcher.</li>
+                <li>Use File Explorer, find the RealVNC Viewer install file, and double-click to install the program.</li>
 
-                <li>Open a browser to: <a href="https://www.raspberrypi.org/downloads/raspbian/" class="bg-info text-white" target="_blank">https://www.raspberrypi.org/downloads/raspbian/</a>.<br />
+                <li>During the install of RealVNC Viewer accept all of the default settings.
                 </li>
 
-                <li>Download the latest ZIP file of the Raspbian Operating System with desktop<br />
+                <li>Press the Windows key and type:
+                    <code>VNC Viewer</code>
+                    , then press the &#39; Enter&#39; key to start VNC Viewer.
+                </li>
+
+                <li>The first time VNC Viewer starts, there are no coonections, so it looks like this:<br />
                     <p>
-                        <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
-                            <img src="RaspbianWithDesktop.PNG" width="300" alt="Rasbian with desktop" class="img-responsive img-responsive" /></a> Raspbian With Desktop
+                        <a href="VNCViewer.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VNCViewer.PNG', 'popup'); return false;">
+                            <img src="VNCViewer.PNG" width="300" alt="VNC Viewer" class="img-responsive img-responsive" /></a>VNC Viewer
                     </p>
                 </li>
 
-
-                <li>Save the ZIP file to your  ' 
-                <code><span id="bPath"></span></code>
-                    <script>document.getElementById("bPath").innerHTML = Path; </script>
-                    ' folder.<br />
-                </li>
+                <li>There is no need to sign in or to create a RealVNC account.</li>
 
             </ol>
             <hr />
@@ -174,20 +169,26 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Flash microSD card</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Boot the Raspberry Pi</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>These steps are performed on your laptop.</li>
+                <li>These steps are performed on your Raspberry Pi.</li>
 
-                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br />
+                <li>Install the microSD card into the slot on the Raspberry Pi.<br />
+                    For this exercise you will not need a USB keyboard and mouse unless you run into problems later.
                 </li>
 
-                <li>Newer laptops without microSD slots will need to see the professor or a TA to get a microSD card reader.</li>
+                <li>Turn on the power and allow the Raspberry Pi to boot up.</li>
 
-                <li>Open Etcher and make sure it recognizes the microSD card.<br />
-                    If Ether does not appear, you will need to restart your laptop.</li>
+                <li>On the monitor press the colored dot to display the Pi desktop.<br />
+                    Because you do not have a keyboard and mouse (input devices) connected to the Raspberry Pi, you cannot interact with it.<br />
+                    This is where the need arises to run the VNC Viewer.<br />
+                    And this is why you enabled VNC when you originally configured your Raspberry Pi.
+                </li>
+
+
                 <li>Select the ZIP file downloaded earlier and Drag and Drop it into etcher where it says &#39;Select Image&#39;.<br />
                     <p>
                         <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
@@ -386,7 +387,15 @@
         </div>
 
 
-
+        <hr />
+        <div class="col-lg-12 text-danger text-center">
+            <h2>WHEN DONE<br />
+                SHUTDOWN THE RASPBERRY PI<br />
+                TURN OFF THE POWER<br />
+                REMOVE YOUR microSD CARD
+            </h2>
+        </div>
+        <hr />
 
 
         <div class=" col-lg-12">
