--- a/FormativeUno01/FormativeUno01.html
+++ b/FormativeUno01/FormativeUno01.html
@@ -346,6 +346,16 @@
         </div>
 
 
+        <hr />
+        <div class="col-lg-12 text-danger text-center">
+            <h2>WHEN DONE<br />
+                SHUTDOWN THE RASPBERRY PI<br />
+                TURN OFF THE POWER<br />
+                REMOVE YOUR microSD CARD
+            </h2>
+        </div>
+        <hr />
+
 
         <div class=" col-lg-12">
             <br />
