new microSD image, completed VNC assignment, removed old summative

--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -216,9 +216,16 @@
 
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
                     <p>
-                        <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                            <img src="InstallMicroSD.PNG" width="300" alt="install microSD into Pi" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                        <a href="InsertMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('howtoInsertMicroSD.Pdf', 'popup'); return false;">
+                            <img src="InsertMicroSD.PNG" width="100" alt="install microSD into Pi" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
                     </p>
+
+                    <p>
+                        <a href="HOWTOINSERTMICROSD.pdf" class="img-responsive img-rounded" target="popup" onclick="window.open('InsertMicroSD.PNG', 'popup'); return false;">
+                            <img src="HOWTOINSERTMICROSD.pdf" width="300" alt="install microSD into Pi" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                    </p>
+
+
 
                 </li>
 
