--- a/FormativePi02/FormativePi02.html
+++ b/FormativePi02/FormativePi02.html
@@ -188,90 +188,99 @@
                     And this is why you enabled VNC when you originally configured your Raspberry Pi.
                 </li>
 
-
-                <li>Select the ZIP file downloaded earlier and Drag and Drop it into etcher where it says &#39;Select Image&#39;.<br />
-                    <p>
-                        <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
-                            <img src="FlashMicroSD.PNG" width="300" alt="flash raspbian to microSD" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
-                    </p>
+                <li>Your Raspberry Pi desktop should appear after about 30 seconds.<br />
+                    If the desktop does not appear, see a teaching assistant or the professor.
                 </li>
-                <li>Press the Flash button. The process will take several minutes.</li>
-                <li>After the microSD is flashed, open File Explorer on your laptop, navigate to the root of the microSD card (probably E:), right-click and choose &#39;New&gt;Text Document&#39;</li>
-                <li>Enter your name as the name of the text document, such as &#39;PatPaulson.txt&#39;<br />
-                    This will identify you as the owner of the microSD card in case it is turned into Lost 
-                    &amp; Found.</li>
+
             </ol>
             <hr />
         </div>
 
         <!--Exercise 3-->
 
-        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3-Boot Raspberry Pi</a></div>
+        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3-Start VNC Viewer</a></div>
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
             <ol>
-                <li>While the microSD card is flashing, locate a USB keyboard and mouse.
-                    <br />
-                    Plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
+                <li>These steps are performed on your laptop.</li>
 
-                <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
+                <li>If VNC Viewer is not running, start it per the instructions in Excercise 1.</li>
+
+                <li>
                     <p>
-                        <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                            <img src="InstallMicroSD.PNG" width="300" alt="install microSD into Pi" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
+                        In the address bar at the top, enter the IP address of your Raspberry Pi that you saved from your previous assignment.
+                        <a href="VNCIPAddress.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VNCIPAddress.PNG', 'popup'); return false;">
+                            <img src="VNCIPAddress.PNG" width="300" alt="enter RPi IP address" class="img-responsive img-responsive" /></a>Enter IP Address<br />
                     </p>
-
                 </li>
-
-                <li>Press the power button on the Pi, which should be on top or around the monitor in front of you.<br />
-                    You should see a red light on the Pi, which indicates power is on.</li>
-
-                <li>On your monitor press the button with the colored dot.
-                    <br />
-                    Note that repeatedly pressing this button switches the monitor between displaying your laptop and the Raspberry Pi.
-                </li>
-                <li>Follow the on-screen instructions to set your country, language and Time-zone.<br />
-                    Check the boxes for &#39;Use English language&#39; and &#39;Use US keyboard&#39;.</li>
-                <li>Check “This screen shows a black border around the desktop” if you have a black border.</li>
-                <li>CONNECT TO WSU GUEST ONLY!!!<br />
-                    If prompted make an account and log in.</li>
-
-                <li>When asked to update, click next.
-                    <br />
-                    The update will begin, this make take a few minutes.
-                    <br />
-                    If asked to restart, do so.</li>
-
-                <li>Open Notepad, choose a password (Please use <code>MagicMirror%</code>).<br />
-                    Save your password in a file named  &#39;Readme.txt&#39;; in your  
-                    &#39;  
-                <code><span id="cPath"></span></code>
-                    <script>document.getElementById("cPath").innerHTML = Path; </script>
-                    ' folder.<br />
-
-                </li>
-
-                <li>If you forget your password you can change it in the settings, under Pi&gt;Preferences&gt;Raspberry Pi Configuration.
+                <li>Press the Enter key.<br />
+                    You may get a warning about logging into a new machine, ignore it and press OK.</li>
+                <li>An Authenication dialog box will appear.<br />
+                    Enter your username and password for the Raspberry Pi.<br />
+                    username: pi<br />
+                    password: <strong>MagicMirror%</strong>
+                    Click OK.<br />
                     <p>
-                        <a href="ChangePassword.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ChangePassword.PNG', 'popup'); return false;">
-                            <img src="ChangePassword.PNG" width="300" alt="change password" class="img-responsive img-responsive" /></a>Changing Password<br />
+                        <a href="VNCLogin.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VNCLogin.PNG', 'popup'); return false;">
+                            <img src="VNCLogin.PNG" width="300" alt="logon to RPi" class="img-responsive img-responsive" /></a>Login<br />
                     </p>
                 </li>
 
-                <li>In the upper right corner of the desktop hover over the Wi-Fi signal to determine the IP address. </li>
-                <li>Store this IP address on your laptop in the ReadMe.txt file that contains your password.<br />
-                    The IP address will be of the format: 10.20.xx.xx<br />
-                    Note that the IP address will change about every 30 days.
+                <li>Choose Menu&gt;Accessories&gt;Text Editor<br />
+                    Enter your name and today's date.</li>
+
+                <li>Choose File&gt;Save<br />
+                    name the file Readme.txt and save the file in your /home/pi folder.<br />
+                    Then close the Text Editor.<br />
+                    <p>
+                        <a href="TextFile.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('TextFile.PNG', 'popup'); return false;">
+                            <img src="TextFile.PNG" width="300" alt="create text file" class="img-responsive img-responsive" /></a>Create Text File<br />
+                    </p>
                 </li>
-                <li>In the upper left corner, you will see the raspberry icon.<br />
-                    Raspberry Icon, aka 
-                    &#39;Menu&#39;<br />
-                    Click the Raspberry icon,
-                    <img src="Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" />
-                    then preferences, and Raspberry Pi Configuration.<br />
+
+                <li>In the top right of the VNC Viewer right-click the VNC icon and select File Transfer...
                 </li>
-                <li>Click the interfaces tab, Enable SSH and VNC.</li>
-                <li>Reboot the Raspberry Pi so that all changes take effect.</li>
+
+                <li>In the lower left of the &#39;VNC Server - File Transfer&#39; dialog box click the &#39;Send Files&#39; button.<br />
+                    There will be a listing of the files in the /home/pi directory<br />
+                    Select the Readme.txt file that you just created.<br />
+                    Click OK to send the files to your laptop.
+                    <p>
+                        <a href="FileTransfer.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FileTransfer.PNG', 'popup'); return false;">
+                            <img src="FileTransfer.PNG" width="300" alt="File Transfer" class="img-responsive img-responsive" /></a>Transferring File<br />
+
+
+                </li>
+
+                <li>To see where on your laptop the Readme.txt file was sent, in the upper-left corner of VNC Viewer click the icon and select Transfer Files.<br />
+                    The VNC Viewer dialog box appears and indicates the folder receiving (fetching) the files.<br />
+
+                    <p>
+                        <a href="ReceiveFiles.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ReceiveFiles.PNG', 'popup'); return false;">
+                            <img src="ReceiveFiles.PNG" width="300" alt="Receive Files" class="img-responsive img-responsive" /></a>Recevie Files Folder<br />
+                    </p>
+
+                    <br />
+
+
+                </li>
+
+                <li>On your laptop, verify that the Readme.txt file did arrive in the correct folder.<br />
+                    Use File Explorer to browse to that location, double-click Readme.txt to open it up.<br />
+                    Position the dialog boxes as shown below and take a screen shot.<br />
+                    <p>
+                        <a href="TransferSuccess.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('TransferSuccess.PNG', 'popup'); return false;">
+                            <img src="TransferSuccess.PNG" width="300" alt="Transfer Success" class="img-responsive img-responsive" /></a>Transfer Success<br />
+                    </p>
+                    <br />
+
+                    Note that the main window is the VNC session.<br />
+                    The File Explorer and NotePad windows are from your computer.<br />
+                    The other dialog boxes and the desktop are from the Raspberry Pi VNC session.                    
+                </li>
+
+
             </ol>
             <hr />
         </div>
@@ -280,51 +289,30 @@
 
         <!--Exercise 4-->
 
-        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
+        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shot</a></div>
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
-            <p>Install scrot (short for <strong>SCR</strong>een sh<strong>OT</strong>) to take screen shots that document your work.</p>
+            <p>Use the Snipping Tool on your laptop to take a screen shot shown above to document your work.</p>
 
             <ol>
-                <li>On the Raspberry Pi open a terminal window.</li>
+                <li>On your laptop position the windows as indicated and shown above.</li>
 
-                <li>In the Terminal window type <code>sudo apt-get install scrot</code>.<br />
-                    Press Enter and the installation will begin.
+                <li>Open the Snipping Tool and take a screen shot.
                 </li>
 
-                <li>After scrot is installed, in the Terminal window type <code>scrot -h</code><br />
-                    This brings up information on how to use scrot.<br />
-                    Review this information.<br />
-                    <p>
-                        <a href="scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
-                            <img src="scrot.PNG" width="300" alt="scrot help" class="img-responsive img-responsive" /></a>scrot help
-                    </p>
-                    <br />
+                <li>Save the screen shot  as &quot;FormativePi02&quot; in your ' 
+             <code><span id="abPath"></span></code>
+                    <script>document.getElementById("abPath").innerHTML = Path; </script>
+                    ' folder.<br />
 
-                </li>
-
-                <li>Note that simply typing <code>scrot</code> in a Terminal window takes a screen shot and stores it in the   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
-                    <p>
-                        <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                            <img src="ScrotShots.PNG" width="300" alt="screen shots" class="img-responsive img-responsive" /></a>Scrot Screen Shots
-                    </p>
-                </li>
-
-                <li>Select Pi&gt;Accessories&gt;Text Editor, and create a file that contains only your name in 72 point font.</li>
-                <li>In the terminal window type in 
-                    <code>scrot -s</code>
-                    then click and drag the mouse to select an area around your name in the text file.
-                </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot to <strong>YourName.png</strong></li>
-                <li>Right click the Pi desktop, select &#39;Desktop Preferences&#39;, under the &#39;Desktop&#39; tab set the Layout to &#39;Centre image on screen&#39;, and on Picture select the <strong>YourName.png</strong> file.<br />
-                    Then click OK.<br />
-                    <p>
-                        <a href="YourName.png" class="img-responsive img-rounded" target="popup" onclick="window.open('YourName.PNG', 'popup'); return false;">
-                            <img src="YourName.png" width="300" alt="desktop settings" class="img-responsive img-responsive" /></a>Desktop Settings<br />
-                    </p>
-                </li>
             </ol>
+            <hr />
+        </div>
+
+
+        <div class="col-lg-12 text-danger">
+            <h2>Screen Shot FormativePi02</h2>
             <hr />
         </div>
 
@@ -339,34 +327,24 @@
             <p>
                 For this final Exercise read all of these instructions.<br />
                 You are submitting to the appropriate D2L Assignment folder a screen shot that documents your work.<br />
-                Make sure that the following programs are running on the Raspberry Pi, with:
             </p>
-            <ul>
-                <li>Chromium web browser, open to D2L: <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">https://winona.learn.minnstate.edu/</a>, showing this course, with your name in the top right,</li>
-                <li>Rasberry Pi configuration, &#39;Interfaces&#39; tab, showing VNC and SSH enabled,</li>
-                <li>Your name visible in the desktop background,</li>
-                <li>Terminal window, after running the commands <code>cat /etc/os-release</code> and <code>scrot</code></li>
-            </ul>
             <br />
-            <p>
-                The screen shot name will be of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
-                <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="sample screen shot" class="img-responsive img-responsive" /></a>Sample Screen Shot<br />
-                <br />
-            </p>
-            Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.<br />
         </div>
+
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
-                Upload your screenshot to the &#39;FormativePi02&#39; D2L Assignment Folder.
+                (90) 1. Upload your screenshot to the &#39;FormativePi02&#39; D2L Assignment Folder.
             </p>
-
-            <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativePi02</h2>
-                <hr />
-            </div>
+            <hr />
         </div>
+
+
+
+
+
+
+
+
 
 
         <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Submit Assignment</a></div>
