revised prefix to IOT for all assignments

--- a/IOTA01/IOTA01.html
+++ b/IOTA01/IOTA01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Formative Uno 01</title>
+    <title>IOT Arduino 01</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="FormativeUNO01" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOTA01" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -287,12 +287,12 @@
                     <code>scrot -s</code>
                     then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop and the Arduino IDE.
                 </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot <strong>FormativeUNO01.png</strong></li>
+                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot <strong>IOTA01.png</strong></li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
-                        <a href="FormativeUNO01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FormativeUNO01.PNG', 'popup'); return false;">
-                            <img src="FormativeUNO01.PNG" width="300" alt="screen shot format" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
+                        <a href="IOTA01.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('IOTA01.PNG', 'popup'); return false;">
+                            <img src="IOTA01.PNG" width="300" alt="screen shot format" class="img-responsive img-responsive" /></a>Screen Shot Format<br />
                     </p>
                 </li>
             </ol>
@@ -317,11 +317,11 @@
         <div class="col-lg-12 text-primary">
             <p>
                 (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
-                Upload your screenshot to the &#39;FormativeUNO01&#39; D2L Assignment Folder.
+                Upload your screenshot to the &#39;IOTA01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativeUNO01</h2>
+                <h2>Screen Shot IOTA01</h2>
                 <hr />
             </div>
         </div>
@@ -341,7 +341,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativeUNO01.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTA01.">
             <hr />
         </div>
 
