--- a/IOTB01/IOTB01.html
+++ b/IOTB01/IOTB01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Formative Bit 01</title>
+    <title>IOT micro:Bit 01</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="FormativeBIT01" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOTB01" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -233,7 +233,7 @@ display.scroll("WELCOME TO MIS!")
 </pre>
                 </li>
 
-                <li>Save the program as <strong>FormativeBit01.py</strong> in the default location,                   
+                <li>Save the program as <strong>IOTB01.py</strong> in the default location,                   
                     &#39;/home/pi/mu_code&#39;
                 </li>
 
@@ -290,7 +290,7 @@ display.clear()
                     <br />
                 </li>
 
-                <li>Save the program as <strong>FormativeBit01X.py</strong> in the default folder.
+                <li>Save the program as <strong>IOTB01X.py</strong> in the default folder.
                 </li>
 
                 <li>Use your trouble-shooting skills to make the program function properly:<br />
@@ -320,13 +320,13 @@ display.clear()
         <div id="Exercise04" class="collapse in  col-lg-12">
 
             <ol>
-                <li>On the Raspberry Pi make sure the mu editor showing FormativeBit01X and your name on the desktop are visible.</li>
+                <li>On the Raspberry Pi make sure the mu editor showing IOTB01X and your name on the desktop are visible.</li>
 
                 <li>In the terminal window type in 
                     <code>scrot -s</code>
                     then click and drag the mouse to select an area from the top left showing the VNC icon and title bar, also include your name on the desktop and the mu editor.
                 </li>
-                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot FormativeBit01.png</li>
+                <li>Open File Manager, navigate to the /home/pi directory and rename the screen shot IOTB01.png</li>
                 <li>
                     <p>
                         Your screen shot will look something like this:<br />
@@ -356,11 +356,11 @@ display.clear()
         <div class="col-lg-12 text-primary">
             <p>
                 (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
-                Upload your screenshot to the &#39;FormativeBIT01&#39; D2L Assignment Folder.
+                Upload your screenshot to the &#39;IOTB01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativeBIT01</h2>
+                <h2>Screen Shot IOTB01</h2>
                 <hr />
             </div>
         </div>
@@ -380,7 +380,7 @@ display.clear()
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativeBIT01.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTB01.">
             <hr />
         </div>
 
