--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Formative Pi 01</title>
+    <title>IOT Pi 01</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="FormativePI01" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOTP01" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -365,11 +365,11 @@
         <div class="col-lg-12 text-primary">
             <p>
                 (90) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
-                Upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+                Upload your screenshot to the &#39;IOTP01&#39; D2L Assignment Folder.
             </p>
 
             <div class="col-lg-12 text-danger">
-                <h2>Screen Shot FormativePi01</h2>
+                <h2>Screen Shot IOTP01</h2>
                 <hr />
             </div>
         </div>
@@ -388,7 +388,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi01.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP01.">
             <hr />
         </div>
 
