--- a/IOTP02/IOTP02.html
+++ b/IOTP02/IOTP02.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Formative Pi 02</title>
+    <title>IOT Pi 02</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-lg-3">
                 <label class="text-primary" for="assignment">Assignment:</label>
-                <input class="form-control" name="assignment" id="assignment" value="FormativePI02" type="text" readonly="readonly">
+                <input class="form-control" name="assignment" id="assignment" value="IOTP02" type="text" readonly="readonly">
             </div>
         </div>
         <!-- -end-Student, class and assignment information-end -->
@@ -268,7 +268,7 @@
 
                 <li>On your laptop, verify that the Readme.txt file did arrive in the correct folder.<br />
                     Use File Explorer to browse to that location, double-click Readme.txt to open it up.<br />
-                    Position the dialog boxes as shown below and take a screen shot.<br />
+                    Position the dialog boxes as shown below and take a screenshot.<br />
                     <p>
                         <a href="TransferSuccess.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('TransferSuccess.PNG', 'popup'); return false;">
                             <img src="TransferSuccess.PNG" width="300" alt="Transfer Success" class="img-responsive img-responsive" /></a>Transfer Success<br />
@@ -289,19 +289,19 @@
 
         <!--Exercise 4-->
 
-        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shot</a></div>
+        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-ScreenShot</a></div>
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
-            <p>Use the Snipping Tool on your laptop to take a screen shot shown above to document your work.</p>
+            <p>Use the Snipping Tool on your laptop to take a screenshot shown above to document your work.</p>
 
             <ol>
                 <li>On your laptop position the windows as indicated and shown above.</li>
 
-                <li>Open the Snipping Tool and take a screen shot.
+                <li>Open the Snipping Tool and take a screenshot.
                 </li>
 
-                <li>Save the screen shot  as &quot;FormativePi02&quot; in your ' 
+                <li>Save the screenshot  as &quot;IOTP02&quot; in your ' 
              <code><span id="abPath"></span></code>
                     <script>document.getElementById("abPath").innerHTML = Path; </script>
                     ' folder.<br />
@@ -312,7 +312,7 @@
 
 
         <div class="col-lg-12 text-danger">
-            <h2>Screen Shot FormativePi02</h2>
+            <h2>ScreenShot IOTP02</h2>
             <hr />
         </div>
 
@@ -325,15 +325,14 @@
 
         <div id="UploadScreenShot" class="collapse in  col-lg-12">
             <p>
-                For this final Exercise read all of these instructions.<br />
-                You are submitting to the appropriate D2L Assignment folder a screen shot that documents your work.<br />
+                Submit to the appropriate D2L Assignment folder a screenshot that documents your work.<br />
             </p>
             <br />
         </div>
 
         <div class="col-lg-12 text-primary">
             <p>
-                (90) 1. Upload your screenshot to the &#39;FormativePi02&#39; D2L Assignment Folder.
+                (90) 1. Upload your screenshot to the &#39;IOTP02&#39; D2L Assignment Folder.
             </p>
             <hr />
         </div>
@@ -360,7 +359,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi02.">
+            <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP02.">
             <hr />
         </div>
 
