initial complete commit

--- a/IOTP02/IOTP02.html
+++ b/IOTP02/IOTP02.html
@@ -103,7 +103,7 @@
             <ol>
                 <li>Obtain RealVNC viewer</li>
                 <li>Install RealVNC viewer on your laptop</li>
-                <li>Connect to theRaspberry Pi using RealVNC</li>
+                <li>Connect to the Raspberry Pi using RealVNC</li>
                 <li>Control the Raspberry Pi from your laptop using RealVNC</li>
                 <li>Transfer files in both directions between the Raspberry Pi and your laptop</li>
             </ol>
@@ -152,7 +152,7 @@
                     , then press the &#39; Enter&#39; key to start VNC Viewer.
                 </li>
 
-                <li>The first time VNC Viewer starts, there are no coonections, so it looks like this:<br />
+                <li>The first time VNC Viewer starts, there are no connections, so it looks like this:<br />
                     <p>
                         <a href="VNCViewer.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('VNCViewer.PNG', 'popup'); return false;">
                             <img src="VNCViewer.PNG" width="300" alt="VNC Viewer" class="img-responsive img-responsive" /></a>VNC Viewer
