--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -203,11 +203,29 @@
             <ol>
                 <li>These steps are performed on your laptop.</li>
 
+                <li><p>
+                    Your laptop MUST be connected to the WSU network with a WIRED connection, a wireless connection will NOT work.<br />
+                    Look for this icon in your task tray:
+                <img src="WiredNetwork.PNG" alt="wired connection" class="img-responsive img-responsive" />Wired Network Connection Icon
+                    </p>
+                </li>
+
+                <li>The Raspberry Pi must be connected to the WSU Guest wireless.<br />
+                    Do NOT connect to the Warrior or Wazoo wireless networks.
+                </li>
+
+                <li>On the Raspberry Pi you MUST open the Chromium browser and verify that you can  reach a website such as: <br />
+                    <code>google.com</code><br />
+                    If not, you will be redirected to a web authentication page, where you can create a WSU guest account, and logon.
+                </li>
+
+
                 <li>If PuTTY is not running, start it per the instructions in Excercise 1.</li>
 
                 <li>
                     <p>
                         In the &#39;Host Name (or IP address)&#39; box at the top, enter the IP address of your Raspberry Pi that you saved from your previous assignment.<br />
+                        Note: if you cannot connect, the Raspberry Pi IP address may have changed. In that case you will need to connect a keyboard and mouse to the Raspberry Pi to obtain the new IP address.<br />
                         Make sure that &#39;Port&#39; is set to &#39;22&#39; and<br />
                         the &#39;Connection type:&#39; is &#39;SSH&#39;
 
@@ -239,9 +257,29 @@
                     </p>
                 </li>
 
+            </ol>
+
+            <hr />
+
+        </div>
+
+
+
+
+
+
+        <!--Exercise 4-->
+
+        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-Working With PuTTY</a></div>
+
+        <div id="Exercise04" class="collapse in  col-lg-12">
+
+            <ol>
+                
+                <li>These steps are done on your laptop. </li>
+
                 <li>There is no graphical user interface in PuTTY, you must type in all commands.<br />
                     If you need help, simply type in &#39;help&#39; and press enter to see a list of available commands.<br />
-
                 </li>
 
 
@@ -306,11 +344,22 @@
 
 
 
-        <!--Exercise 4-->
 
-        <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4-ScreenShot</a></div>
 
-        <div id="Exercise04" class="collapse in  col-lg-12">
+
+
+
+
+
+
+
+
+
+        <!--Exercise 5-->
+
+        <div class="col-lg-12"><a href="#Exercise05" class="btn btn-info" data-toggle="collapse">Exercise 5-ScreenShot</a></div>
+
+        <div id="Exercise05" class="collapse in  col-lg-12">
 
             <p>Use the Snipping Tool on your laptop to take a screenshot of the PuTTY window from the previous exercise.<br />   
                 
