--- a/IOT03/IOT03.html
+++ b/IOT03/IOT03.html
@@ -267,7 +267,7 @@
 
         <div class="col-lg-12">
             <p>
-                Congratulations! You have successfully installed and used WaveMon, a WiFi monitoring program on a Raspberry Pi single board computer.                
+                Congratulations! You have successfully used Apache2, a web server, on a Raspberry Pi single board computer.                
             </p>
             <hr />
         </div>
