updated mu-editor installation instructions

--- a/IOTB01/IOTB01.html
+++ b/IOTB01/IOTB01.html
@@ -153,7 +153,10 @@
                     This is not a problem, the micro:bit is running a default program that was uploaded previously.
                 </li>
                 <li>On the Pi, open a Terminal window.<br />
-                    Type in <code>sudo apt-get update</code>, and when that completes, type in <code>sudo apt-get upgrade</code> to update the Raspberry Pi.
+                    Type in <code>sudo apt-get update</code><br />
+                    and when that completes, type in <br />
+                    <code>sudo apt-get upgrade</code><br />
+                    to update the Raspberry Pi.
                 </li>
                 <li>Check to see if the Mu editor is already installed.<br />
                     From the menu choose &#39;Programming&#39;, and look for &#39;mu&#39;<br />
@@ -163,9 +166,9 @@
                     </p>
                 </li>
 
-                <li>If the Mu editor is not installed, then open the Chromium browser and follow these directions to add it from the Raspberry Pi &#39;Recommended Software&#39;:
+                <li>If the Mu editor is not installed, then in the terminal window type the following:<br />
+                    <code>sudo apt-get install mu-editor</code>
                     <br />
-                    <a href="https://codewith.mu/en/howto/1.0/install_raspberry_pi" class="bg-info text-white" target="_blank">Install Mu: https://codewith.mu/en/howto/1.0/install_raspberry_pi</a>
                 </li>
 
                 <li>On the Pi, start mu.<br />
