updated IoT05, IoT06 to correct errors

--- a/IOT05/IOT05.html
+++ b/IOT05/IOT05.html
@@ -127,7 +127,7 @@
 
         <div id="Exercise01" class="collapse in  col-lg-12">
 
-            <p>ref: <a href="http://www.linuxandubuntu.com/home/install-setup-nagios-core-on-raspberry-pi" class="bg-info text-white" target="_blank">Linux and Ubuntu Article</a>  </p>
+            <p>ref: <a href="https://support.nagios.com/kb/article/nagios-core-installing-nagios-core-from-source-96.html#Raspbian" class="bg-info text-white" target="_blank">Nagios Core Raspian Installation Instructions</a>  </p>
             <ol>
                 <li>These steps are performed on the Raspberry Pi.</li>
 
