--- a/IOT06/IOT06.html
+++ b/IOT06/IOT06.html
@@ -146,6 +146,7 @@
                 </li>
 
                 <li>In the Terminal window enter the following command to install RPi-Monitor:<br />
+                    <code>sudo apt-get update</code>
                     <code>sudo apt-get install rpimonitor</code>
                 </li>
 
